Bugfix majorLogo, mainPage rightPanel align-item center, editMainPage input

--- a/src/css/EditMainPage.css
+++ b/src/css/EditMainPage.css
@@ -256,7 +256,7 @@
     width: 400px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
 }
 
 .EditMainPageContainer .receiptTitle div {
