--- a/src/css/MainPage.css
+++ b/src/css/MainPage.css
@@ -110,10 +110,10 @@
 }
 
 .rightPanel {
-    width: 70%;
+    width: 65vw;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
 }
 
 
